--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -1,4 +1,8 @@
 $main-blue: rgb(25, 118, 210);
+$blue40:#457b9d;
+$blue30:#a8dadc;
 $main-white: #ffff;
+$main-red:#e63946;
+$main-green:#2a9d8f;
 $border-color:#ccc;
-$dark-green:#006400;
+
