--- a/src/sass/components/_machine.scss
+++ b/src/sass/components/_machine.scss
@@ -100,8 +100,8 @@
             font-size: 1.5em;
             margin: 5px 15px 0 15px;
             padding: 5px;
-            background-color: skyblue;
-            color: $dark-green;
+            background-color: $blue30;
+            color: $main-green;
             width: 60px;
 
             &:hover {
@@ -112,22 +112,52 @@
     }
 
     &_div {
-        min-height: 150px;
-        width: 150px;
+        height: 60%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         margin: 0 auto;
-        justify-content: center;
+        justify-content: space-evenly;
+        align-items: center;
+
+        @include mobileMax {
+            padding: 15px
+        }
 
         &_total {
-            height: 40px;
+            @extend %flex-center;
+            justify-content: space-evenly;
             padding: 5px;
-            width: 100%;
-            font-size: 1.5em;
+            height: 40px;
+            width: 10rem;
+            border-radius: 5px;
+            font-size: 1.1rem;
             font-weight: 200;
-            text-align: center;
-            background-color: rgb(74, 129, 151);
+            background-color: $blue40;
             color: $main-white;
+            margin-bottom: 5px;
+        }
+
+        &_action {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 10px;
+
+            @include mobileMax {
+                justify-content: space-evenly;
+            }
+
+            &_cancel {
+                @extend %action-button;
+                background-color: $main-red;
+            }
+
+            &_complete {
+                @extend %action-button;
+                background-color: $main-green;
+            }
         }
     }
 }
