--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,5 +3,6 @@
 './mixins/mixins',
 './variables/index.scss',
 './components/header',
-'./components/machine';
+'./components/machine',
+'./components/cash-container';
 
