--- a/src/sass/components/_machine.scss
+++ b/src/sass/components/_machine.scss
@@ -17,6 +17,7 @@
 
     h1 {
         @extend %flex-center;
+        margin-bottom: 5px;
         font-size: 28px;
         font-weight: bold;
         text-align: center;
