--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,5 +4,6 @@
 './variables/index.scss',
 './components/header',
 './components/machine',
-'./components/cash-container';
+'./components/cash-container',
+'./components/collect-money';
 
