--- a/src/sass/components/_cash-container.scss
+++ b/src/sass/components/_cash-container.scss
@@ -36,7 +36,7 @@
     }
 
     &_div {
-        height: 60%;
+        height: 70%;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -50,6 +50,7 @@
 
         &_total-coin {
             @extend %flex-center;
+            margin-top: 20px;
             justify-content: space-evenly;
             padding: 5px;
             height: 40px;
@@ -109,4 +110,8 @@
             }
         }
     }
+
+
+
 }
+
