--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -44,6 +44,14 @@
             margin-right: 1rem;
             cursor: pointer;
             padding: 0;
+
+            &.selected {
+                img {
+                    transform: scale(1.1);
+                    filter: grayscale(0);
+                    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+                }
+            }
         }
     }
 
