--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -5,5 +5,6 @@
 './components/header',
 './components/machine',
 './components/cash-container',
-'./components/collect-money';
+'./components/collect-money',
+'./utilities/tooltip';
 
