--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -3,6 +3,7 @@ $blue40:#457b9d;
 $blue30:#a8dadc;
 $main-white: #ffff;
 $main-red:#e63946;
+$red30:#F00;
 $main-green:#2a9d8f;
 $main-black: #404040;
 $border-color:#ccc;
