added custom tooltip

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,5 +6,6 @@
 './components/machine',
 './components/cash-container',
 './components/collect-money',
-'./utilities/tooltip';
+'./utilities/tooltip',
+'./components/leds';
 
