--- a/src/sass/utilities/_tooltip.scss
+++ b/src/sass/utilities/_tooltip.scss
@@ -1,36 +1,85 @@
-.tooltip-wrapper {
-    display: inline-block;
-    position: relative;
-  
-    .tooltip-container {
+.tooltip-container {
+  position: relative;
+
+  .tooltip {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    z-index: 1;
+    white-space: nowrap;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    opacity: 0;
+    
+    &::before {
+      content: "";
       position: absolute;
+      width: 0;
+      height: 0;
+      border-width: 0.5rem;
+      border-style: solid;
+      border-color: transparent;
+      z-index: -1;
+    }
+    
+    &.top {
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      
+      &::before {
+        top: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        border-top-color: #000;
+      }
+    }
+    
+    &.right {
+      top: 50%;
+      left: 100%;
+      transform: translateY(-50%);
+      
+      &::before {
+        top: 50%;
+        right: 100%;
+        transform: translateY(-50%);
+        border-right-color: #000;
+      }
+    }
+    
+    &.bottom {
       top: 100%;
       left: 50%;
       transform: translateX(-50%);
-      z-index: 1;
-      background-color: #222;
-      color: #fff;
-      border-radius: 3px;
-      padding: 5px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  
-      .tooltip-arrow {
-        position: absolute;
-        top: -10px;
+      
+      &::before {
+        bottom: 100%;
         left: 50%;
         transform: translateX(-50%);
-        border-top: 10px solid #222;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-      }
-  
-      .tooltip-content {
-        font-size: 12px;
+        border-bottom-color: #000;
       }
     }
-  
-    .tooltip-child {
-      cursor: pointer;
+    
+    &.left {
+      top: 50%;
+      right: 100%;
+      transform: translateY(-50%);
+      
+      &::before {
+        top: 50%;
+        left: 100%;
+        transform: translateY(-50%);
+        border-left-color: #000;
+      }
     }
   }
-  
+
+  &:hover .tooltip {
+    opacity: 1;
+  }
+}
