--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -10,4 +10,10 @@
     @media (max-width: $mobile) {
         @content
     }
-}
+};
+
+@mixin box-shadow($input) {
+    -webkit-box-shadow: $input;
+    box-shadow:$input;
+    -moz-box-shadow:$input;
+};
