--- a/src/sass/components/_cash-container.scss
+++ b/src/sass/components/_cash-container.scss
@@ -4,8 +4,7 @@
     padding: 16px;
     background-color: $main-white;
     height: 35rem;
-    box-shadow: $main-shadow;
-
+    @include box-shadow($main-shadow);
     @include mobileMax {
         width: 100%;
         height: auto;
@@ -38,11 +37,11 @@
     &_div {
         height: 70%;
         width: 100%;
-        display: flex;
+        @extend %display-flex;
         flex-direction: column;
         margin: 0 auto;
         justify-content: space-evenly;
-        align-items: center;
+        @extend %align-center;
 
         @include mobileMax {
             padding: 15px
@@ -80,7 +79,7 @@
 
         &_action {
             width: 100%;
-            display: flex;
+            @extend %display-flex;
             flex-direction: row;
             justify-content: space-between;
             gap: 10px;
