--- a/src/sass/extends/_extends.scss
+++ b/src/sass/extends/_extends.scss
@@ -14,6 +14,11 @@
     display: flex;
 }
 
+%flex-wrap {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
 %align-center {
     -webkit-box-align: center;
     -ms-flex-align: center;
