--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,6 @@
 @import '../variables/index';
 
+$shadow : 0 0 10px rgba(251, 250, 250, 0.5);
 .header {
     @extend %display-flex;
     @extend %align-center;
@@ -40,13 +41,19 @@
             margin-right: 1rem;
             cursor: pointer;
             padding: 0;
+            padding: 0.5rem;
+            box-sizing: border-box;
 
             &.selected {
                 img {
-                    transform: scale(1.1);
                     filter: grayscale(0);
-                    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+                    @include box-shadow($shadow);
+                    transition: transform 0.2s ease-in-out, filter 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
                 }
+            }
+
+            &:hover img {
+                transform: scale(1.1);
             }
         }
     }
